XMLtoCSV/objects/unpackaged/objects/Project_vod__c.object
<CustomObject>
    <description>PMO Tool Kit - Used to capture base project related details</description>
    <fields>
        <fullName>End_Date_vod__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Constraints_vod__c</fullName>
        <label>Project Constraints</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Goals_vod__c</fullName>
        <label>Project Goals</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>Project Start Date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date_vod__c</columns>
        <columns>End_Date_vod__c</columns>
        <columns>Project_Goals_vod__c</columns>
        <columns>Project_Constraints_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>